storage/xtradb/sync/sync0arr.c
@@ -483,6 +483,15 @@ sync_array_cell_print(
 		innobase_basename(cell->file), (ulong) cell->line,
 		difftime(time(NULL), cell->reservation_time));
 
+	/* If stacktrace feature is enabled we will send a SIGUSR2
+	signal to thread waiting for the semaphore. Signal handler
+	will then dump the current stack to error log. */
+	if (srv_use_stacktrace) {
+#ifndef __WIN__
+		pthread_kill(cell->thread, SIGUSR2);
+#endif
+	}
+
 	if (type == SYNC_MUTEX) {
 		/* We use old_wait_mutex in case the cell has already
 		been freed meanwhile */
@@ -537,6 +546,16 @@ sync_array_cell_print(
 			(ulong) rwlock->last_s_line,
 			rwlock->last_x_file_name,
 			(ulong) rwlock->last_x_line);
+
+		/* If stacktrace feature is enabled we will send a SIGUSR2
+		signal to thread that has locked RW-latch with write mode.
+		Signal handler will then dump the current stack to error log. */
+		if (writer != RW_LOCK_NOT_LOCKED && srv_use_stacktrace) {
+#ifndef __WIN__
+			pthread_kill(rwlock->writer_thread, SIGUSR2);
+#endif
+		}
+
 	} else {
 		ut_error;
 	}
